# Concurrent-Task-Processing-Engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Logger.cpp  Logger.h  Task.cpp  Task.h  TaskQueue.cpp  TaskQueue.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  main.cpp
